FreeST/test/Programs/InvalidTests/typedefSkip/typedefSkip.fst
type T : TU = Skip

main : Int
main = 5
